# rambo

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
rambo/: Cargo.toml
rambo-cli/: Cargo.toml
rambo-cli/src/: cli.rs  main.rs
rambo/src/: extract.rs  glob.rs  lib.rs  rename.rs  statistics.rs
src/: cli.rs  extract.rs  glob.rs  main.rs
